--- a/templates/WebApp/about.html
+++ b/templates/WebApp/about.html
@@ -1,4 +1,4 @@
-{% extends "WebApp/app_base.html" %}
+{% extends "WebApp/base/app_base.html" %}
 {% load static %}
 {% block title %}SERVIR AppTemplate - About{% endblock %}
 {% block script %}
@@ -117,6 +117,6 @@
         </div>
         <br>
     </div>
-    {% include 'WebApp/about_about.html' %}
+    {% include 'WebApp/about_pages/about_about.html' %}
 
 {% endblock %}
