--- a/templates/WebApp/home.html
+++ b/templates/WebApp/home.html
@@ -1,4 +1,4 @@
-{% extends "WebApp/app_base.html" %}
+{% extends "WebApp/base/app_base.html" %}
 {% load static %}
 
 {% block title %}SERVIR AppTemplate - Home{% endblock %}
@@ -179,8 +179,6 @@
                 </div>
 
 
-
-
                 <!-- Content Row -->
                 <div class="row">`
                     <div class="col-lg-12 mb-4">
@@ -218,5 +216,5 @@
 
     <script src="{% static '/js/home.js' %}"></script>
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
-    {% include 'WebApp/home_about.html' %}
+    {% include 'WebApp/about_pages/home_about.html' %}
 {% endblock %}
