--- a/WebApp/static/css/charts/chart_sqlite.css
+++ b/WebApp/static/css/charts/chart_sqlite.css
@@ -1,19 +1,5 @@
-html {
-    height: 100%;
-}
 
-#wrapper {
-    min-height: calc(100vh - 50px);
-}
-#map_nc {
-    height: 300px;
-    width: 300px;
-}
- #loading-image-nc {
-    z-index: 500;
-}
-
- #loading_nc{
+#loading_cserv {
     position: absolute;
     display: flex;
     justify-content: center;
@@ -24,5 +10,9 @@ html {
     left: 0;
     opacity: 0.7;
     background-color: #fff;
+    z-index: 500;
+}
+
+#loading-image-sql {
     z-index: 500;
 }
