--- a/templates/WebApp/about_pages/map_fixedsize_about.html
+++ b/templates/WebApp/about_pages/map_fixedsize_about.html
@@ -7,8 +7,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <div class="text-dark alert m-auto justify-content-between"
-                         style="bottom:0;width: 100%;">
+                    <div class="text-dark alert m-auto justify-content-between about_page">
                         <ul>
                             <li><strong>templates/WebApp/map_fixedsize.html</strong> contains the HTML code
                                 to modify
