--- a/templates/WebApp/base/app_base.html
+++ b/templates/WebApp/base/app_base.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Custom fonts-->
-    <link href="{% static '/css/all.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static '/css/base/all.min.css' %}" rel="stylesheet" type="text/css">
     <link rel="icon" href="{% static '/images/logo.png' %}" type="image/png">
     <link
             href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
@@ -17,8 +17,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <link href="{% static '/css/basic.css' %}" rel="stylesheet">
-    <link href="{% static '/css/base.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static '/css/base/basic.css' %}" rel="stylesheet">
+    <link href="{% static '/css/base/base.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static '/css/common.css' %}" rel="stylesheet" type="text/css">
 
     {% block script %}{% endblock %}
@@ -27,7 +27,7 @@
 <div id="wrapper">
     <div id="content-wrapper" class="d-flex flex-column">
         <!-- Main Content -->
-        <div id="content" style="background: #e1e3e5">
+        <div id="content bg-gray-300">
             <div class="row bg-white">
                 <div class="col-lg-12 h-50">
 
@@ -77,9 +77,9 @@
                     </div>
                 </div>
             </div>
-            <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0c1a4e;">
+            <nav class="navbar navbar-expand-lg navbar-dark" id="navbar_app_base">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="{% url "home" %}" style="margin-left: 5%">Geospatial App</a>
+                    <a class="navbar-brand" href="{% url "home" %}" id="title_navbar">Geospatial App</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -87,11 +87,11 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-                        <ul class="navbar-nav float-right" style="margin-left: 55%;">
+                        <ul class="navbar-nav float-right" id="ul_navbar">
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'about' %}">About</a>
                             </li>
-                          <li class="nav-item">
+                            <li class="nav-item">
                                 <a class="nav-link" href="{% url 'setup' %}">Setup</a>
                             </li>
                             <li class="nav-item">
