--- a/templates/WebApp/base/login.html
+++ b/templates/WebApp/base/login.html
@@ -1,5 +1,5 @@
 {% load static %}
-<link href="{% static '/css/basic.css' %}" rel="stylesheet">
+<link href="{% static '/css/base/basic.css' %}" rel="stylesheet">
 {% load i18n account %}
 {% block common_scripts %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -12,7 +12,7 @@
         <div id="content-wrapper" class="d-flex flex-column">
             <!-- Main Content -->
             <div id="content">
-                {% include "WebApp/topbar.html" %}
+                {% include "WebApp/base/topbar.html" %}
                 <div class="container col-md-12 text-center">
                     <h2 class="m-4">Geospatial App Authentication</h2>
 
