--- a/templates/WebApp/charts/chart_from_ClimateSERV.html
+++ b/templates/WebApp/charts/chart_from_ClimateSERV.html
@@ -1,4 +1,4 @@
-{% extends "WebApp/app_base.html" %}
+{% extends "WebApp/base/app_base.html" %}
 {% load static %}
 
 {% block title %}SERVIR AppTemplate - Home{% endblock %}
@@ -14,7 +14,7 @@
 
     <!-- Custom styles-->
     <script src="{% static '/js/utils.js' %}"></script>
-    <link rel="stylesheet" src="{% static '/css/chart_cserv.css' %}">
+    <link rel="stylesheet" src="{% static '/css/charts/chart_cserv.css' %}">
 
 {% endblock %}
 
@@ -38,10 +38,9 @@
                         </label>
 
                         <div id="loading_cserv">
-{#                            <img id="loading-image-cserv" src="{% static 'images/loading.gif' %}" alt="Loading..."/>#}
-                                           <div class="spinner-border text-secondary" role="status">
-  <span class="visually-hidden">Loading...</span>
-</div>
+                            <div class="spinner-border text-secondary" role="status">
+                                <span class="visually-hidden">Loading...</span>
+                            </div>
                         </div>
                         <figure class="highcharts-figure">
                             <div id="chart-container2"></div>
@@ -62,7 +61,7 @@
     </div>
 
     <script src="{% static '/js/chart_from_ClimateSERV.js' %}"></script>
-    {% include 'WebApp/chart_from_ClimateSERV_about.html' %}
+    {% include 'WebApp/about_pages/chart_from_ClimateSERV_about.html' %}
 
 {% endblock %}
 
