--- a/templates/WebApp/maps/map_fullscreen.html
+++ b/templates/WebApp/maps/map_fullscreen.html
@@ -1,4 +1,4 @@
-{% extends "WebApp/app_base.html" %}
+{% extends "WebApp/base/app_base.html" %}
 
 {% load static %}
 
@@ -18,7 +18,7 @@
     <script type="text/javascript"
             src="https://cdn.jsdelivr.net/npm/leaflet-timedimension@1.1.1/dist/leaflet.timedimension.min.js"></script>
     <script src="{% static '/js/L.Control.Opacity.js' %}"></script>
-    <link href="{% static '/css/L.Control.Opacity.css' %}" rel="stylesheet"/>
+    <link href="{% static '/css/libs/L.Control.Opacity.css' %}" rel="stylesheet"/>
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css"/>
     <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-search/3.0.5/leaflet-search.src.js"
@@ -28,15 +28,16 @@
 
     <script src="{% static 'js/utils.js' %}"></script>
 
-    <script src="{% static 'js/basemaps.js' %}"></script>   <link
-  rel="stylesheet"
-  href="{% static '/css/geosearch.css' %}"
-/>
+    <script src="{% static 'js/basemaps.js' %}"></script>
+    <link
+            rel="stylesheet"
+            href="{% static '/css/libs/geosearch.css' %}"
+    />
 
-    <link href="{% static '/css/full_map.css' %}" rel="stylesheet"/>
+    <link href="{% static '/css/maps/full_map.css' %}" rel="stylesheet"/>
 
     <script src="{% static '/js/geosearch.umd.js' %}"></script>
-        <script src="{% static '/js/geosearch.umd.js.map' %}"></script>
+    <script src="{% static '/js/geosearch.umd.js.map' %}"></script>
 
 {% endblock %}
 
@@ -159,21 +160,6 @@
                             </div>
                         </div>
                     </div>
-{#                    <div class="accordion-item">#}
-{#                        <h2 class="accordion-header" id="headingFour">#}
-{#                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"#}
-{#                                    data-bs-target="#collapseFour" aria-expanded="false"#}
-{#                                    aria-controls="collapseFour">#}
-{#                                Search#}
-{#                            </button>#}
-{#                        </h2>#}
-{#                        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"#}
-{#                             data-bs-parent="#accordionExample">#}
-{#                            <div class="accordion-body" id="location_full">#}
-{#                                <p class="p-3 mb-0">Enter location name and hit Enter to recenter the map</p>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                    </div>#}
                 </div>
                 <br>
                 <div class="m-auto w-75 text-center">
@@ -189,5 +175,5 @@
             <link rel="stylesheet" href="{% static 'css/common.css' %}">
         </div>
     </div>
-    {% include 'WebApp/map_fullscreen_about.html' %}
+    {% include 'WebApp/about_pages/map_fullscreen_about.html' %}
 {% endblock %}
