--- a/templates/WebApp/charts/chart_from_SQLite.html
+++ b/templates/WebApp/charts/chart_from_SQLite.html
@@ -60,7 +60,7 @@
         <br>
     </div>
 
-    <script src="{% static '/js/chart_from_SQLite.js' %}"></script>
+    <script src="{% static '/js/charts/chart_from_SQLite.js' %}"></script>
     {% include 'WebApp/about_pages/chart_from_SQLite_about.html' %}
 
 {% endblock %}
