--- a/templates/WebApp/charts/chart_from_netCDF.html
+++ b/templates/WebApp/charts/chart_from_netCDF.html
@@ -102,7 +102,7 @@
     {#    <script>#}
     {#    var bounds_nc={{ netcdf_bounds }};#}
     {#    </script>#}
-    <script src="{% static '/js/chart_from_netCDF.js' %}"></script>
+    <script src="{% static '/js/charts/chart_from_netCDF.js' %}"></script>
     {% include 'WebApp/about_pages/chart_from_netCDF_about.html' %}
 
 {% endblock %}
