--- a/templates/WebApp/maps/map_from_GEE.html
+++ b/templates/WebApp/maps/map_from_GEE.html
@@ -16,14 +16,14 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/iso8601-js-period@0.2.1/iso8601.min.js"></script>
     <script type="text/javascript"
             src="https://cdn.jsdelivr.net/npm/leaflet-timedimension@1.1.1/dist/leaflet.timedimension.min.js"></script>
-    <script src="{% static '/js/L.Control.Opacity.js' %}"></script>
+    <script src="{% static '/js/libs/L.Control.Opacity.js' %}"></script>
     <link href="{% static '/css/libs/L.Control.Opacity.css' %}" rel="stylesheet"/>
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css"/>
     <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-search/3.0.5/leaflet-search.src.js"
             integrity="sha512-PDM7dpetuBcPp2fV/ZyCj9BGV8ybPchsrSzQqVZ3WoM8YcxEa2lAj0n1+4MCRzgsEROmVTwQXGw0IrXCCgH+/Q=="
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="{% static 'js/leaflet-providers.js' %}"></script>
+    <script src="{% static 'js/libs/leaflet-providers.js' %}"></script>
     <script src="{% static '/js/utils.js' %}"></script>
 
     <script src="{% static '/js/basemaps.js' %}"></script>
@@ -39,8 +39,8 @@
     <link rel="stylesheet" href="{% static 'css/maps/gee_map.css' %}">
 
 
-    <script src="{% static '/js/geosearch.umd.js' %}"></script>
-    <script src="{% static '/js/geosearch.umd.js.map' %}"></script>
+    <script src="{% static '/js/libs/geosearch.umd.js' %}"></script>
+    <script src="{% static '/js/libs/geosearch.umd.js.map' %}"></script>
 
 
     <div class="container-fluid bg-gray-300">
@@ -230,7 +230,7 @@
                                 </div>
                             </div>
                         </div>
-                        <script src="{% static 'js/map_from_GEE.js' %}"></script>
+                        <script src="{% static 'js/maps/map_from_GEE.js' %}"></script>
                     </div>
                 </div>
             </div>
