--- a/templates/WebApp/base/app_base.html
+++ b/templates/WebApp/base/app_base.html
@@ -27,7 +27,7 @@
 <div id="wrapper">
     <div id="content-wrapper" class="d-flex flex-column">
         <!-- Main Content -->
-        <div id="content bg-gray-300">
+        <div id="content" class="bg-gray-300">
             <div class="row bg-white">
                 <div class="col-lg-12 h-50">
 
