reorganized to earlier version

--- a/WebApp/static/css/gee_map.css
+++ b/WebApp/static/css/gee_map.css
@@ -85,7 +85,7 @@
 }
 
 a.leaflet-bar-part.leaflet-bar-part-single {
-    background-image: url('../../images/search.png') !important;
+    background-image: url('../images/search.png') !important;
     background-size: 18px 18px;
 }
 
