--- a/templates/WebApp/login.html
+++ b/templates/WebApp/login.html
@@ -1,5 +1,5 @@
 {% load static %}
-<link href="{% static '/css/base/basic.css' %}" rel="stylesheet">
+<link href="{% static '/css/base/../../WebApp/static/css/basic.css' %}" rel="stylesheet">
 {% load i18n account %}
 {% block common_scripts %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
