--- a/WebApp/static/css/fixed_map.css
+++ b/WebApp/static/css/fixed_map.css
@@ -107,7 +107,7 @@
 }
 
 a.leaflet-bar-part.leaflet-bar-part-single {
-    background-image: url('../../images/search.png') !important;
+    background-image: url('../images/search.png') !important;
     background-size: 18px 18px;
 }
 
