--- a/WebApp/static/css/full_map.css
+++ b/WebApp/static/css/full_map.css
@@ -144,7 +144,7 @@ html {
 }
 
 a.leaflet-bar-part.leaflet-bar-part-single {
-    background-image: url('../../images/search.png') !important;
+    background-image: url('../images/search.png') !important;
     background-size: 18px 18px;
 }
 
