--- a/templates/WebApp/chart_from_ClimateSERV.html
+++ b/templates/WebApp/chart_from_ClimateSERV.html
@@ -14,7 +14,7 @@
 
     <!-- Custom styles-->
     <script src="{% static '/js/utils.js' %}"></script>
-    <link rel="stylesheet" src="{% static '/css/charts/chart_cserv.css' %}">
+    <link rel="stylesheet" src="{% static '/css/charts/../../WebApp/static/css/chart_cserv.css' %}">
 
 {% endblock %}
 
@@ -60,7 +60,7 @@
         <br>
     </div>
 
-    <script src="{% static '/js/charts/chart_from_ClimateSERV.js' %}"></script>
+    <script src="{% static '/js/charts/../../WebApp/static/js/chart_from_ClimateSERV.js' %}"></script>
     {% include 'WebApp/about_pages/chart_from_ClimateSERV_about.html' %}
 
 {% endblock %}
