--- a/templates/WebApp/chart_from_netCDF.html
+++ b/templates/WebApp/chart_from_netCDF.html
@@ -28,7 +28,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-minimap/3.6.1/Control.MiniMap.min.js"
             integrity="sha512-WL3nAJlWFKoDShduxQRyY3wkBnQsINXdIfWIW48ZaPgYz1wYNnxIwFMMgigzSgjNBC2WWZ8Y8/sSyUU6abuF0g=="
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" src="{% static '/css/charts/chart_netcdf.css' %}">
+    <link rel="stylesheet" src="{% static '/css/charts/../../WebApp/static/css/chart_netcdf.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -102,7 +102,7 @@
     {#    <script>#}
     {#    var bounds_nc={{ netcdf_bounds }};#}
     {#    </script>#}
-    <script src="{% static '/js/charts/chart_from_netCDF.js' %}"></script>
+    <script src="{% static '/js/charts/../../WebApp/static/js/chart_from_netCDF.js' %}"></script>
     {% include 'WebApp/about_pages/chart_from_netCDF_about.html' %}
 
 {% endblock %}
