--- a/templates/socialaccount/login.html
+++ b/templates/socialaccount/login.html
@@ -1,4 +1,4 @@
-{% extends "WebApp/base/app_base.html" %}
+{% extends "WebApp/base/../WebApp/app_base.html" %}
 {% load static %}
 {% load i18n account %}
 {% block script %}
