--- a/templates/WebApp/app_base.html
+++ b/templates/WebApp/app_base.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <!-- Custom fonts-->
-    <link href="{% static '/css/base/../../WebApp/static/css/all.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static '/css/all.min.css' %}" rel="stylesheet" type="text/css">
     <link rel="icon" href="{% static '/images/logo.png' %}" type="image/png">
     <link
             href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
@@ -17,8 +17,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <link href="{% static '/css/base/../../WebApp/static/css/basic.css' %}" rel="stylesheet">
-    <link href="{% static '/css/base/../../WebApp/static/css/base.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static '/css/basic.css' %}" rel="stylesheet">
+    <link href="{% static '/css/base.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static '/css/common.css' %}" rel="stylesheet" type="text/css">
 
     {% block script %}{% endblock %}
