--- a/templates/WebApp/login.html
+++ b/templates/WebApp/login.html
@@ -1,5 +1,5 @@
 {% load static %}
-<link href="{% static '/css/base/../../WebApp/static/css/basic.css' %}" rel="stylesheet">
+<link href="{% static '/css/basic.css' %}" rel="stylesheet">
 {% load i18n account %}
 {% block common_scripts %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -7,12 +7,11 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 {% endblock %} {% block content %}
     <div id="wrapper">
-        {#        {% include "WebApp/sidebar.html" %}#}
         <!-- Content Wrapper -->
         <div id="content-wrapper" class="d-flex flex-column">
             <!-- Main Content -->
             <div id="content">
-                {% include "WebApp/base/topbar.html" %}
+                {% include "WebApp/topbar.html" %}
                 <div class="container col-md-12 text-center">
                     <h2 class="m-4">Geospatial App Authentication</h2>
 
