--- a/templates/WebApp/map_from_GEE.html
+++ b/templates/WebApp/map_from_GEE.html
@@ -1,4 +1,4 @@
-{% extends "WebApp/base/app_base.html" %}
+{% extends "WebApp/app_base.html" %}
 {% load static %}
 
 {% block title %}SERVIR AppTemplate - Home{% endblock %}
@@ -16,14 +16,14 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/iso8601-js-period@0.2.1/iso8601.min.js"></script>
     <script type="text/javascript"
             src="https://cdn.jsdelivr.net/npm/leaflet-timedimension@1.1.1/dist/leaflet.timedimension.min.js"></script>
-    <script src="{% static '/js/libs/../../WebApp/static/js/L.Control.Opacity.js' %}"></script>
-    <link href="{% static '/css/libs/../../WebApp/static/css/L.Control.Opacity.css' %}" rel="stylesheet"/>
+    <script src="{% static '/js/L.Control.Opacity.js' %}"></script>
+    <link href="{% static '/css/L.Control.Opacity.css' %}" rel="stylesheet"/>
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css"/>
     <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-search/3.0.5/leaflet-search.src.js"
             integrity="sha512-PDM7dpetuBcPp2fV/ZyCj9BGV8ybPchsrSzQqVZ3WoM8YcxEa2lAj0n1+4MCRzgsEROmVTwQXGw0IrXCCgH+/Q=="
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="{% static 'js/libs/../../WebApp/static/js/leaflet-providers.js' %}"></script>
+    <script src="{% static '/js/leaflet-providers.js' %}"></script>
     <script src="{% static '/js/utils.js' %}"></script>
 
     <script src="{% static '/js/basemaps.js' %}"></script>
@@ -34,13 +34,13 @@
 {% block content %}
     <link
             rel="stylesheet"
-            href="{% static '/css/libs/../../WebApp/static/css/geosearch.css' %}"
+            href="{% static '/css/geosearch.css' %}"
     />
-    <link rel="stylesheet" href="{% static 'css/maps/../../WebApp/static/css/gee_map.css' %}">
+    <link rel="stylesheet" href="{% static '/css/gee_map.css' %}">
 
 
-    <script src="{% static '/js/libs/../../WebApp/static/js/geosearch.umd.js' %}"></script>
-    <script src="{% static '/js/libs/../../WebApp/static/js/geosearch.umd.js.map' %}"></script>
+    <script src="{% static '/js/geosearch.umd.js' %}"></script>
+    <script src="{% static '/js/geosearch.umd.js.map' %}"></script>
 
 
     <div class="container-fluid bg-gray-300">
@@ -110,16 +110,6 @@
                                                                 aria-selected="false"></i> Legends
                                                         </button>
                                                     </li>
-                                                    {#                                                    <li class="nav-item" role="presentation">#}
-                                                    {#                                                        <button class="nav-link p-0" id="location_gee-tab"#}
-                                                    {#                                                                data-bs-toggle="tab"#}
-                                                    {#                                                                data-bs-target="#location_gee" type="button"#}
-                                                    {#                                                                role="tab"#}
-                                                    {#                                                                aria-controls="location_gee"#}
-                                                    {#                                                                aria-selected="false"></i> Location#}
-                                                    {#                                                        </button>#}
-                                                    {#                                                    </li>#}
-
                                                 </ul>
                                                 <div class="border-grey bg-white tab-content" id="layer_tab_content_gee"
                                                 >
@@ -230,7 +220,7 @@
                                 </div>
                             </div>
                         </div>
-                        <script src="{% static 'js/maps/../../WebApp/static/js/map_from_GEE.js' %}"></script>
+                        <script src="{% static '/js/map_from_GEE.js' %}"></script>
                     </div>
                 </div>
             </div>
@@ -275,5 +265,5 @@
         <br>
 
     </div>
-    {% include 'WebApp/about_pages/map_from_GEE_about.html' %}
+    {% include 'WebApp/map_from_GEE_about.html' %}
 {% endblock %}
