--- a/templates/WebApp/update_datamodel.html
+++ b/templates/WebApp/update_datamodel.html
@@ -1,4 +1,4 @@
-{% extends "WebApp/base/app_base.html" %}
+{% extends "WebApp/app_base.html" %}
 {% load static %}
 
 {% block title %}SERVIR AppTemplate - Home{% endblock %}
@@ -80,5 +80,5 @@
         </div>
         <br>
     </div>
-    {% include 'WebApp/about_pages/update_datamodel_about.html' %}
+    {% include 'WebApp/update_datamodel_about.html' %}
 {% endblock %}
