src to href css

--- a/templates/WebApp/about.html
+++ b/templates/WebApp/about.html
@@ -5,7 +5,7 @@
     <!-- Custom styles-->
 
     <!-- Custom scripts-->
-    <link rel="stylesheet" src="{% static '/css/about.css' %}">
+    <link href="{% static '/css/about.css' %}" rel="stylesheet" type="text/css">
 
 {% endblock %}
 
