--- a/templates/WebApp/chart_from_ClimateSERV.html
+++ b/templates/WebApp/chart_from_ClimateSERV.html
@@ -14,7 +14,7 @@
 
     <!-- Custom styles-->
     <script src="{% static '/js/utils.js' %}"></script>
-    <link rel="stylesheet" src="{% static '/css/chart.css' %}">
+    <link rel="stylesheet" href="{% static '/css/chart.css' %}">
 
 {% endblock %}
 
